--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     //para gps y cámara
     //implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.camera:camera-camera2:1.1.0'
 
     //Para imágenes y RecyclerView
